# IVS-2.-projekt

./: .gitignore  Doxyfile  README.md  hodnoceni.txt  math_library.h  odevzdani.txt  skutecnost.txt  test
mockup/: cal.pro  main.cpp  mainwindow.cpp  mainwindow.h  poznamky
plan/: xlapsa00_xdejma00_xdeing00_plan.txt
profiling/: Makefile  filegene  filegenerator.c  gmon.out  math_library.h  profiling  profiling.cpp  profiling_1000_input  profiling_100_input  profiling_10_input  profiling_comment  zprava.txt
src/: Doxyfile  Makefile  cal.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math_library.cpp  math_library.h
src/googletest-master/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tdd_test  tdd_tests.cpp
src/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/googletest-master/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
